--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/index.html
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/index.html
@@ -156,7 +156,7 @@
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Graphic Design
 									Item</h3>
-								<a data-rel="prettyPhoto" href="img/portfolio/portfolio_09.jpg"
+								<a data-rel="prettyPhoto" href="./resources/img/portfolio/portfolio_09.jpg"
 									class="dmbutton a2" data-animate="fadeInUp"><i
 									class="fa fa-search"></i></a> <a href="single-project.html"
 									class="dmbutton a2" data-animate="fadeInUp"><i
@@ -172,7 +172,7 @@
 
 				<div class="portfolio-item web-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_02.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_02.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
@@ -193,7 +193,7 @@
 
 				<div class="portfolio-item graphic-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_03.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_03.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Graphic Design
@@ -215,7 +215,7 @@
 
 				<div class="portfolio-item graphic-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_04.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_04.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Graphic Design
@@ -237,7 +237,7 @@
 
 				<div class="portfolio-item books">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_05.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_05.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
@@ -258,7 +258,7 @@
 
 				<div class="portfolio-item graphic-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_06.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_06.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Graphic Design
@@ -280,7 +280,7 @@
 
 				<div class="portfolio-item books">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_07.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_07.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
@@ -301,7 +301,7 @@
 
 				<div class="portfolio-item graphic-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_08.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_08.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Graphic Design
@@ -323,7 +323,7 @@
 
 				<div class="portfolio-item web-design">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_01.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_01.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
@@ -344,7 +344,7 @@
 
 				<div class="portfolio-item books">
 					<div class="he-wrap tpl6">
-						<img src="img/portfolio/portfolio_10.jpg" alt="">
+						<img src="./resources/img/portfolio/portfolio_10.jpg" alt="">
 						<div class="he-view">
 							<div class="bg a0" data-animate="fadeIn">
 								<h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
