--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/Welcome.xhtml
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/Welcome.xhtml
@@ -6,10 +6,11 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition>
-	<!-- *****************************************************************************************************************
-	 CONTENT
-	 ***************************************************************************************************************** -->
+<ui:composition template="template/template.xhtml">
+
+	<ui:define name="content">
+		<h1>Welcome to JSF tutorial</h1>
+	</ui:define>
 
 </ui:composition>
 </html>
